Fix ui footer button alignment

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -2163,7 +2163,6 @@ p {
 
 .form-footer-button {
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 5px;
   height: 30px;
